--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,13 @@
 body {
-    background-color: dimgrey ;
+    background-color: #555 ;
 }
 
 #wrapper {
-    width : 50%;    
-    text-align : center;
+    /*position: absolute;*/
+    width : 75%;    
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .slidecontainer {
