--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,8 @@ body {
 
 .control {
     display: block;
-    margin-left: 100px;
-    /* margin-right: auto; */
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
 #wrapper {
